--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,13 @@
     <title>el titulo del post</title>
 </head>
 <body>
-      <h1>Aqui vamos a hacer un post</h1>
-      <p>y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>este es el articulo atractivo del post</h1>
+            <p>y este es el parrafo de inicio donde vamos a explicar
+               lo increible que es hacer ramas
+            </p>
+        </div>
+    </div>
 </body>
 </html>
