--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>este es el articulo atractivo del post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar
