agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,11 @@
             <p>y este es el parrafo de inicio donde vamos a explicar
                lo increible que es hacer ramas
             </p>
+            <p>
+                Los blog son la mejor forma de compartir
+                informacion y tus ideas.
+                mucho mas que ir a conferencias
+            </p>
         </div>
     </div>
 </body>
