--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de master</span>
         </div>
         <div id="post">
             <h1>este es el articulo atractivo del post</h1>
@@ -22,6 +22,9 @@
                 Los blog son la mejor forma de compartir
                 informacion y tus ideas.
                 mucho mas que ir a conferencias
+            </p>
+            <p>
+                sucribete y dale like
             </p>
         </div>
     </div>
