cambio de titulo
por que puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Bienvenido a Hyperblog</span>
         </div>
         <div id="post">
             <h1>este es el articulo atractivo del post</h1>
