color de fondo,logo nuevo y mejor color header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
             <span id="tagline">Bienvenido a Hyperblog 2.0</span>
         </div>
