--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,7 @@
             <p>
                 sucribete y dale like
             </p>
+            <div id="footer">Hecho con amor</div>
         </div>
     </div>
 </body>
