--- a/blogpost.html
+++ b/blogpost.html
@@ -15,13 +15,13 @@
             <span id="tagline">Bienvenido a Hyperblog 2.0</span>
         </div>
         <div id="post">
-            <h1>este es el articulo atractivo del post</h1>
-            <p>y este es el parrafo de inicio donde vamos a explicar
+            <h1>Este es el articulo atractivo del post</h1>
+            <p>y este es el párrafo de inicio donde vamos a explicar
                lo increible que es hacer ramas
             </p>
             <p>
                 Los blog son la mejor forma de compartir
-                informacion y tus ideas.
+                información y tus ideas.
                 mucho mas que ir a conferencias
             </p>
             <p>
