--- a/blogpost.html
+++ b/blogpost.html
@@ -16,12 +16,12 @@
         </div>
         <div id="post">
             <h1>Este es el articulo atractivo del post</h1>
-            <p>y este es el párrafo de inicio donde vamos a explicar
+            <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar
                lo increible que es hacer ramas
             </p>
             <p>
                 Los blog son la mejor forma de compartir
-                información y tus ideas.
+                informaci&oacute;n y tus ideas.
                 mucho mas que ir a conferencias
             </p>
             <p>
