cambios en el archivo principal e historia

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         </div>
         <div id="post">
             <h1>Este es el articulo atractivo del post</h1>
-            <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar
+            <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar
                lo increible que es hacer ramas
             </p>
             <p>
