cambios en el titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
-            <span id="tagline">Bienvenido a Hyperblog 2.0</span>
+            <span id="tagline">Bienvenido a Hyperblog 2.0 es un blog del futuro</span>
         </div>
         <div id="post">
             <h1>Este es el articulo atractivo del post</h1>
