se incluye el html con la imagen ahora si

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
                lo increible que es hacer ramas
             </p>
             <p>
+                <img src="imagenes/prueba.JPG"
+            </p>
+            <p>
                 Los blog son la mejor forma de compartir
                 informaci&oacute;n y tus ideas.
                 mucho mas que ir a conferencias
