se agrega cambio para la imagen en repositorio

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
                lo increible que es hacer ramas
             </p>
             <p>
-                <img src="imagenes/prueba.JPG"
+                <blockquote class="imgur-embed-pub" lang="en" data-id="qnpvCDW" data-context="false" ><a href="//imgur.com/qnpvCDW"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
             </p>
             <p>
                 Los blog son la mejor forma de compartir
